# WorldBuilder

./: CMakeLists.txt
cmake/: .FindAssimp.cmake.swp  FindAssimp.cmake
include/: Camera.h  ChunkGeometry.h  ChunkModel.h  CircleTool.h  Mesh.h  Model.h  Ray.h  Shader.h  Shader2.h  ShapePrimitives.h  World.h  WorldChunk.h  WorldOverlay.h
shaders/: model.vert  simple.vert  texture.frag
src/: CMakeLists.txt  ChunkGeometry.cpp  ChunkModel.cpp  CircleTool.cpp  Ray.cpp  ShapePrimitives.cpp  World.cpp  WorldChunk.cpp  WorldOverlay.cpp  imgui_impl_sdl_gl3.cpp  main.cpp  main_temp.cpp
